--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="right">
             <div class="righton inner so">
-                <p1>一些废话（？）</p1>
+                <p1>一些废话（？）以及友链</p1>
             </div>
             <br>
             <div class="rightdown">
