--- a/some.html
+++ b/some.html
@@ -41,7 +41,16 @@
         </button>
     </div>
     <br>
-    <div class="container" id="cont3">
+        <div class="container" id="cont3">
+        <h class="h">友链</h> 
+        <p id="p3">馒头的小站w</p>
+        <a href="https://blog.ducker.ml/">
+            <button type="button">
+                详细
+            </button>
+        </a>
+    </div>
+    <div class="container" id="cont4">
         <h class="h">即将更新...</h>  
     </div>
     <br>
