修改一下显示有点问题的图片）

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </h1>
             <p1></p1>
             <div class="icon">
-                <img src="img/icon/qq.png" width="30" id="qq">
-                <img src="img/icon/music.png" width="30" id="music">
-                <img src="img/icon/bili.png" width="30" id="bili">
+                <img src="img/icon/qq.png" width="30" height="30" id="qq">
+                <img src="img/icon/music.png" width="30" height="30" id="music">
+                <img src="img/icon/bili.png" width="30" height="30" id="bili">
             </div>
         </div>
         <div class="right">
@@ -45,9 +45,9 @@
                     <br>
                     <p1 id="audiop">默认文本</p1>
                     <div class="icon">
-                        <img src="img/icon/back.png" width="30" id="back" onclick="back()">
-                        <img src="img/icon/pause.png" width="30" id="play" onclick="start()">
-                        <img src="img/icon/forward.png" width="30" id="forward" onclick="forward()">
+                        <img src="img/icon/back.png" width="30" height="30" id="back" onclick="back()">
+                        <img src="img/icon/pause.png" width="30" height="30" id="play" onclick="start()">
+                        <img src="img/icon/forward.png" width="30" height="30" id="forward" onclick="forward()">
                     </div>
                     <!-- <br> -->
                     <!-- <div id="progressbarouter" onclick="mclick(event)">
