--- a/hoshisora.html
+++ b/hoshisora.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="css/shooting_star.css" type="text/css" rel="stylesheet">
     <link href="css/stars.css" type="text/css" rel="stylesheet">
-    <!--背景流星雨特效https://github.com/front-end-study-GoGoGo/template-html-css-js/tree/main/13css3%E6%B5%81%E6%98%9F%E9%9B%A8%E5%8A%A8%E6%95%88%E8%83%8C%E6%99%AF--》
+    <!--背景流星雨特效https://github.com/front-end-study-GoGoGo/template-html-css-js/tree/main/13css3%E6%B5%81%E6%98%9F%E9%9B%A8%E5%8A%A8%E6%95%88%E8%83%8C%E6%99%AF-->
     <meta name="viewport" content="width=device-width*2, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/hoshisora.js"></script>
