--- a/hoshisora.html
+++ b/hoshisora.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <audio src="" id="A" loop="loop"></audio>
     <div class="hoshi">
         <div></div>
         <div></div>
