--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     </div>
     <footer id="icp">
         <a href="https://icp.gov.moe/?keyword=20220397" target="_blank" class="a">萌ICP备20220397号</a>
-    </footer>
+<!--     </footer>
             <footer id="painter">
         页面图片画师:<a href="https://www.pixiv.net/users/89056">理紅(りく)</a>
         <br>
         页面图片PID:<a href="https://www.pixiv.net/artworks/99057586">99057586</a>
-    </footer>
+    </footer> -->
     <script src="js/music.js"></script>
 </body>
