--- a/some.html
+++ b/some.html
@@ -66,9 +66,9 @@
         <h class="h">即将更新...</h>  
     </div>
     <br>
-    <footer>
+<!--     <footer>
         页面图片画师:<a href="https://www.pixiv.net/users/89056">理紅(りく)</a>
         <br>
         页面图片PID:<a href="https://www.pixiv.net/artworks/99057586">99057586</a>
-    </footer>
+    </footer> -->
 </body>
