--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <!-- <body onmousemove="move(event)" onload="loading()"> -->
     <body onload="loading()">
+<!--     屎山真的有看的必要嘛（ -->
     <div class="outer">
         <div class="left inner">
             <img src="img/1.webp" width="150" style="border-radius: 50%;">
